2007-07-27  Zack Rusin  <zack@kde.org>

        Reviewed by Zack and Lars.

        Correctly or semi-correctly parse the public and system id.

        Patch from Lars.

        * dom/XMLTokenizer.cpp:
        (WebCore::):

2007-07-27  Zack Rusin  <zack@kde.org>

        Reviewed by Zack and Lars.

        Fix uri parsing for attributes.

        * dom/XMLTokenizer.cpp:
        (WebCore::):

2007-07-27  Zack Rusin  <zack@kde.org>

        Reviewed by Zack and Lars.

        Fixing qualified name parsing - from Lars.

        * dom/XMLTokenizer.cpp:
        (WebCore::XMLTokenizer::insertErrorMessageBlock):
        (WebCore::):

2007-07-27  Zack Rusin  <zack@kde.org>

        Reviewed by Zack and Lars.

        Parse dtd's

        * dom/XMLTokenizer.cpp:
        (WebCore::XMLTokenizer::resumeParsing):
        (WebCore::):
        * dom/XMLTokenizer.h:

2007-07-27  Zack Rusin  <zack@kde.org>

        Reviewed by Zack and Lars.

        Implement error handling.

        Add our copyrights

        * dom/XMLTokenizer.cpp:
        (WebCore::XMLTokenizer::handleError):
        (WebCore::XMLTokenizer::end):
        (WebCore::):
        * dom/XMLTokenizer.h:

2007-07-27  Zack Rusin  <zack@kde.org>

        Reviewed by Zack and Lars.

        Making the stylesheets work (plus everything else basically)

        * dom/XMLTokenizer.cpp:
        (WebCore::XMLTokenizer::write):
        (WebCore::XMLTokenizer::insertErrorMessageBlock):
        (WebCore::):
        * dom/XMLTokenizer.h:

2007-07-27  Zack Rusin  <zack@kde.org>

        Reviewed by Zack and Lars.

        Remove the libxml dependency when not compiling with XSLT.

        Just ifdefing, displaying xml doesn't work.

        * WebCore.pro:
        * dom/XMLTokenizer.cpp:
        (WebCore::XMLTokenizer::XMLTokenizer):
        (WebCore::XMLTokenizer::write):
        (WebCore::XMLTokenizer::startElementNs):
        (WebCore::XMLTokenizer::enterText):
        (WebCore::XMLTokenizer::exitText):